# LeNet-CUDA

./: CMakeLists.txt
include/: utils.h
model/: LeNet.pth
params/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  fc3.bias.txt  fc3.weight.txt
src/: lenet.cu  lenet.py  utils.cpp
